# talon

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build.yml  codeql.yml  lint.yml  tests.yml
src/talon/: __init__.py  main.py
src/talon/api/: __init__.py  client.py
src/talon/config/: __init__.py  settings.py
src/talon/database/: __init__.py  alerts_db.py
src/talon/models/: __init__.py  connection.py  filters.py
src/talon/ui/: __init__.py  constants.py  display.py  repl.py  selector.py
src/talon/utils/: __init__.py  colors.py  spinner.py  time_helpers.py
src/talon/watcher/: __init__.py
tests/: test_import.py
