[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talon"
version = "0.1.0"
description = "Interactive REPL for CrowdStrike Falcon API (Unified Alerts watcher)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mark Fox", email = "mark.fox@blacklanternsecurity.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
keywords = ["crowdstrike", "falcon", "security", "monitoring", "alerts", "repl"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "colorama>=0.4.4",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/Mercury0/talon"
Repository = "https://github.com/Mercury0/talon.git"
Issues = "https://github.com/Mercury0/talon/issues"

[project.scripts]
talon = "talon.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
